# s21_matrix_cpp

./: .gitignore  Dockerfile  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  Makefile
src/app/: CMakeLists.txt  main.cpp
src/cmake/: FetchGoogleTest.cmake
src/include/: s21_matrix_oop.h
src/include/matrix/: s21_matrix_oop.h
src/src/: CMakeLists.txt  calc_complements_matrix.cc  constructors.cc  constructors.cpp  determinant_matrix.cc  equal_matrix.cc  equal_matrix.cpp  get_by_index_operator.cpp  getters.cpp  inverse_matrix.cc  minor_matrix.cc  mul_matrix.cpp  multiply_matrix.cc  multiply_number.cpp  operators.cpp  s21_matrix_oop.cpp  setters.cc  subtract_matrix.cc  subtract_matrix.cpp  sum_matrix.cc  sum_matrix.cpp  transpose_matrix.cc
src/src/matrix/: CMakeLists.txt  calc_complements_matrix.cc  constructors.cc  determinant_matrix.cc  equal_matrix.cc  get_by_index_operator.cc  getters.cc  inverse_matrix.cc  minor_matrix.cc  multiply_number.cc  s21_matrix_oop.cc  setters.cc  subtract_matrix.cc  sum_matrix.cc  transpose_matrix.cc
src/tests/: CMakeLists.txt
src/tests/matrix/: CMakeLists.txt  tests_calc_complements_matrix.cc  tests_constuctors.cc  tests_constuctors.cpp  tests_determinant_matrix.cc  tests_eq_matrix.cc  tests_eq_matrix.cpp  tests_get_by_index_operator.cpp  tests_getters.cc  tests_getters.cpp  tests_inverse_matrix.cc  tests_minor_matrix.cc  tests_mul_matrix.cpp  tests_multiply_matrix.cc  tests_multiply_number.cc  tests_multiply_number.cpp  tests_operator_get_by_index.cc  tests_operators.cpp  tests_setters.cc  tests_subtact_matrix.cc  tests_subtact_matrix.cpp  tests_sum_matrix.cc  tests_transpose_matrix.cc
